--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/css/crimen.css
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/css/crimen.css
@@ -59,7 +59,7 @@ a {
 }
 footer {
     background-color: black;
-    position: relative;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 40px;
