--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/css/menu1.css
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/css/menu1.css
@@ -52,7 +52,7 @@ a{
 
 footer {
     background-color: black;
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
     height: 40px;
