--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/css/estiloiniciosesion.css
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/css/estiloiniciosesion.css
@@ -187,3 +187,14 @@ p {
   height: 60px;
 }
 
+.bg-dark {
+    
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-dark-rgb),var(--bs-bg-opacity))!important;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+  color: white;
+  font-family: Verdana, Geneva, sans-serif; 
+  padding-right: 5px;
+}
