--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/css/aventura.css
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/css/aventura.css
@@ -58,7 +58,7 @@ a {
 }
 footer {
     background-color: black;
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
     height: 40px;
