--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/css/fantasia.css
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/css/fantasia.css
@@ -58,9 +58,16 @@ a {
     text-decoration: none;
 }
 
-footer{
+footer {
     background-color: black;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
     color: white;
     text-align: right;
-    padding: 5px;
 }
+
+h1{
+    font-family: fantasy;
+    }
