--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/css/fantasia.css
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/css/fantasia.css
@@ -60,7 +60,7 @@ a {
 
 footer {
     background-color: black;
-    position: relative;
+    position: absolute;
     bottom: 0;
     width: 100%;
     height: 40px;
