--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/css/Index.css
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/css/Index.css
@@ -60,4 +60,63 @@ p {
 
 }
 
+.container{
+    width: 100%;
+    display: flex;
+    max-width: 1100px;
+    
 
+}
+
+.card{
+    
+    width: 300px;
+    margin: 20px;
+    border-radius: 6px;
+    overflow: hidden;
+    background: #fff;
+    box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
+    cursor: default;
+    transition: all 400ms ease;
+    place-items: center;
+}
+
+.card:hover{
+    box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
+    transform: translateY(-3%);
+}
+
+.card img{
+    width: 100%;
+    height: 210px;
+}
+
+.card .contenido{
+    padding: 15px;
+    text-align: center;
+    
+}
+
+.card .contenido p{
+    line-height: 1.5;
+    color: #6a6a6a
+}
+.card .contenido h3{
+    font-weight: 400;
+    margin-bottom: 15px;
+}
+.card .contenido a{
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px;
+    margin-top: 10px;
+    color: #2fb4cc;
+    border: 1px solid #2fb4cc;
+    border-radius: 4px;
+    transition: all 400ms ease;
+}
+
+.card .contenido a:hover{
+    background: #2fb4cc;
+    color: #fff;
+}
