--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/css/deadpool.css
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/css/deadpool.css
@@ -77,3 +77,40 @@ footer {
     color: white;
     text-align: right;
 }
+
+#form {
+    width: 250px;
+    margin: 0 auto;
+    height: 50px;
+  }
+  
+  #form p {
+    text-align: center;
+  }
+  
+  #form label {
+    font-size: 20px;
+  }
+  
+  input[type="radio"] {
+    display: none;
+  }
+  
+  label {
+    color: grey;
+  }
+  
+  .clasificacion {
+    direction: rtl;
+    unicode-bidi: bidi-override;
+    
+  }
+  
+  label:hover,
+  label:hover ~ label {
+    color: orange;
+  }
+  
+  input[type="radio"]:checked ~ label {
+    color: orange;
+  }
