--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/css/walle.css
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/css/walle.css
@@ -74,3 +74,41 @@ font-family: fantasy;
     text-align: right;
     padding: 5px;
 }
+
+
+#form {
+    width: 250px;
+    margin: 0 auto;
+    height: 50px;
+  }
+  
+  #form p {
+    text-align: center;
+  }
+  
+  #form label {
+    font-size: 20px;
+  }
+  
+  input[type="radio"] {
+    display: none;
+  }
+  
+  label {
+    color: grey;
+  }
+  
+  .clasificacion {
+    direction: rtl;
+    unicode-bidi: bidi-override;
+    
+  }
+  
+  label:hover,
+  label:hover ~ label {
+    color: orange;
+  }
+  
+  input[type="radio"]:checked ~ label {
+    color: orange;
+  }
